--- a/control-motor/control-motor.ioc
+++ b/control-motor/control-motor.ioc
@@ -3,7 +3,7 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F103C8T6
 Mcu.Family=STM32F1
@@ -16,16 +16,20 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin10=PA10
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin14=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PD1-OSC_OUT
 Mcu.Pin3=PA6
 Mcu.Pin4=PA7
-Mcu.Pin5=PA9
-Mcu.Pin6=PA10
-Mcu.Pin7=PA13
-Mcu.Pin8=PA14
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=11
+Mcu.Pin5=PB0
+Mcu.Pin6=PB1
+Mcu.Pin7=PB15
+Mcu.Pin8=PA8
+Mcu.Pin9=PA9
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -52,10 +56,26 @@ PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA6.Signal=S_TIM3_CH1
 PA7.Signal=S_TIM3_CH2
+PA8.GPIOParameters=PinState
+PA8.Locked=true
+PA8.PinState=GPIO_PIN_SET
+PA8.Signal=GPIO_Output
 PA9.GPIOParameters=PinState
 PA9.Locked=true
-PA9.PinState=GPIO_PIN_RESET
+PA9.PinState=GPIO_PIN_SET
 PA9.Signal=GPIO_Output
+PB0.GPIOParameters=GPIO_PuPd
+PB0.GPIO_PuPd=GPIO_PULLUP
+PB0.Locked=true
+PB0.Signal=GPIO_Input
+PB1.GPIOParameters=GPIO_PuPd
+PB1.GPIO_PuPd=GPIO_PULLUP
+PB1.Locked=true
+PB1.Signal=GPIO_Input
+PB15.GPIOParameters=PinState
+PB15.Locked=true
+PB15.PinState=GPIO_PIN_SET
+PB15.Signal=GPIO_Output
 PC13-TAMPER-RTC.GPIOParameters=PinState
 PC13-TAMPER-RTC.Locked=true
 PC13-TAMPER-RTC.PinState=GPIO_PIN_SET
