--- a/control-motor/control-motor.ioc
+++ b/control-motor/control-motor.ioc
@@ -11,25 +11,30 @@ Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
 Mcu.IP3=TIM3
-Mcu.IPNb=4
+Mcu.IP4=USART1
+Mcu.IPNb=5
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PA10
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin10=PA8
+Mcu.Pin11=PA9
+Mcu.Pin12=PA10
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PB8
+Mcu.Pin16=PB9
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin18=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PD1-OSC_OUT
 Mcu.Pin3=PA6
 Mcu.Pin4=PA7
 Mcu.Pin5=PB0
 Mcu.Pin6=PB1
-Mcu.Pin7=PB15
-Mcu.Pin8=PA8
-Mcu.Pin9=PA9
-Mcu.PinsNb=15
+Mcu.Pin7=PB13
+Mcu.Pin8=PB14
+Mcu.Pin9=PB15
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -45,25 +50,26 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA10.GPIOParameters=PinState
 PA10.Locked=true
-PA10.PinState=GPIO_PIN_SET
-PA10.Signal=GPIO_Output
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA6.Signal=S_TIM3_CH1
 PA7.Signal=S_TIM3_CH2
-PA8.GPIOParameters=PinState
+PA8.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd
+PA8.GPIO_PuPd=GPIO_PULLUP
+PA8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA8.Locked=true
 PA8.PinState=GPIO_PIN_SET
 PA8.Signal=GPIO_Output
-PA9.GPIOParameters=PinState
 PA9.Locked=true
-PA9.PinState=GPIO_PIN_SET
-PA9.Signal=GPIO_Output
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PB0.GPIOParameters=GPIO_PuPd
 PB0.GPIO_PuPd=GPIO_PULLUP
 PB0.Locked=true
@@ -72,10 +78,28 @@ PB1.GPIOParameters=GPIO_PuPd
 PB1.GPIO_PuPd=GPIO_PULLUP
 PB1.Locked=true
 PB1.Signal=GPIO_Input
+PB13.GPIOParameters=PinState
+PB13.Locked=true
+PB13.PinState=GPIO_PIN_SET
+PB13.Signal=GPIO_Output
+PB14.GPIOParameters=PinState
+PB14.Locked=true
+PB14.PinState=GPIO_PIN_SET
+PB14.Signal=GPIO_Output
 PB15.GPIOParameters=PinState
 PB15.Locked=true
 PB15.PinState=GPIO_PIN_SET
 PB15.Signal=GPIO_Output
+PB8.GPIOParameters=PinState,GPIO_PuPd
+PB8.GPIO_PuPd=GPIO_PULLUP
+PB8.Locked=true
+PB8.PinState=GPIO_PIN_SET
+PB8.Signal=GPIO_Output
+PB9.GPIOParameters=PinState,GPIO_PuPd
+PB9.GPIO_PuPd=GPIO_PULLUP
+PB9.Locked=true
+PB9.PinState=GPIO_PIN_SET
+PB9.Signal=GPIO_Output
 PC13-TAMPER-RTC.GPIOParameters=PinState
 PC13-TAMPER-RTC.Locked=true
 PC13-TAMPER-RTC.PinState=GPIO_PIN_SET
@@ -115,7 +139,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM3_Init-TIM3-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -146,6 +170,8 @@ TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Period,Prescaler
 TIM3.Period=500-1
 TIM3.Prescaler=72-1
+USART1.IPParameters=VirtualMode
+USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
