--- a/control-motor/control-motor.ioc
+++ b/control-motor/control-motor.ioc
@@ -170,7 +170,8 @@ TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Period,Prescaler
 TIM3.Period=500-1
 TIM3.Prescaler=72-1
-USART1.IPParameters=VirtualMode
+USART1.IPParameters=VirtualMode,Mode
+USART1.Mode=MODE_RX
 USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
