--- a/two_select_stm32f103zet6/2023E.ioc
+++ b/two_select_stm32f103zet6/2023E.ioc
@@ -61,7 +61,8 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART1_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
+NVIC.USART2_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 OSC_IN.Mode=HSE-External-Oscillator
 OSC_IN.Signal=RCC_OSC_IN
@@ -178,16 +179,16 @@ SH.S_TIM5_CH1.ConfNb=1
 SH.S_TIM5_CH2.0=TIM5_CH2,Encoder_Interface
 SH.S_TIM5_CH2.ConfNb=1
 TIM2.IPParameters=Prescaler,Period
-TIM2.Period=10000-1
-TIM2.Prescaler=7200-1
+TIM2.Period=1000-1
+TIM2.Prescaler=720-1
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,AutoReloadPreload,OCPolarity_1,OCPolarity_2,Period,Prescaler
 TIM3.OCPolarity_1=TIM_OCPOLARITY_LOW
 TIM3.OCPolarity_2=TIM_OCPOLARITY_LOW
-TIM3.Period=20000-1
-TIM3.Prescaler=72-1
+TIM3.Period=200-1
+TIM3.Prescaler=7200-1
 TIM5.EncoderMode=TIM_ENCODERMODE_TI12
 TIM5.IPParameters=EncoderMode
 USART1.IPParameters=VirtualMode,Mode
