--- a/two_select_stm32f103zet6/2023E.ioc
+++ b/two_select_stm32f103zet6/2023E.ioc
@@ -60,15 +60,19 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.USART1_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
-NVIC.USART2_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
+NVIC.TIM2_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
+NVIC.USART1_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:true
+NVIC.USART2_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 OSC_IN.Mode=HSE-External-Oscillator
 OSC_IN.Signal=RCC_OSC_IN
 OSC_OUT.Mode=HSE-External-Oscillator
 OSC_OUT.Signal=RCC_OSC_OUT
+PA0-WKUP.GPIOParameters=GPIO_PuPd
+PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
 PA0-WKUP.Signal=S_TIM5_CH1
+PA1.GPIOParameters=GPIO_PuPd
+PA1.GPIO_PuPd=GPIO_PULLUP
 PA1.Signal=S_TIM5_CH2
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
@@ -187,10 +191,16 @@ TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,AutoReloadPreload,OCPolarity_1,OCPolarity_2,Period,Prescaler
 TIM3.OCPolarity_1=TIM_OCPOLARITY_LOW
 TIM3.OCPolarity_2=TIM_OCPOLARITY_LOW
-TIM3.Period=200-1
-TIM3.Prescaler=7200-1
+TIM3.Period=3600-1
+TIM3.Prescaler=1-1
+TIM4.EncoderMode=TIM_ENCODERMODE_TI12
+TIM4.IC1Filter=10
+TIM4.IC2Filter=10
+TIM4.IPParameters=EncoderMode,IC1Filter,IC2Filter
 TIM5.EncoderMode=TIM_ENCODERMODE_TI12
-TIM5.IPParameters=EncoderMode
+TIM5.IC1Filter=10
+TIM5.IC2Filter=10
+TIM5.IPParameters=EncoderMode,IC1Filter,IC2Filter
 USART1.IPParameters=VirtualMode,Mode
 USART1.Mode=MODE_RX
 USART1.VirtualMode=VM_ASYNC
