--- a/two_select_stm32f103zet6/2023E.ioc
+++ b/two_select_stm32f103zet6/2023E.ioc
@@ -19,32 +19,35 @@ Mcu.IP8=USART2
 Mcu.IPNb=9
 Mcu.Name=STM32F103Z(C-D-E)Tx
 Mcu.Package=LQFP144
-Mcu.Pin0=OSC_IN
-Mcu.Pin1=OSC_OUT
-Mcu.Pin10=PB14
-Mcu.Pin11=PB15
-Mcu.Pin12=PD13
-Mcu.Pin13=PA8
-Mcu.Pin14=PA9
-Mcu.Pin15=PA10
-Mcu.Pin16=PA13
-Mcu.Pin17=PA14
-Mcu.Pin18=PB6
-Mcu.Pin19=PB7
-Mcu.Pin2=PA0-WKUP
-Mcu.Pin20=PB8
-Mcu.Pin21=PB9
-Mcu.Pin22=VP_SYS_VS_Systick
-Mcu.Pin23=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin24=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin3=PA1
-Mcu.Pin4=PA2
-Mcu.Pin5=PA3
-Mcu.Pin6=PA6
-Mcu.Pin7=PA7
-Mcu.Pin8=PB12
-Mcu.Pin9=PB13
-Mcu.PinsNb=25
+Mcu.Pin0=PE2
+Mcu.Pin1=OSC_IN
+Mcu.Pin10=PB13
+Mcu.Pin11=PB14
+Mcu.Pin12=PB15
+Mcu.Pin13=PD13
+Mcu.Pin14=PA8
+Mcu.Pin15=PA9
+Mcu.Pin16=PA10
+Mcu.Pin17=PA13
+Mcu.Pin18=PA14
+Mcu.Pin19=PB6
+Mcu.Pin2=OSC_OUT
+Mcu.Pin20=PB7
+Mcu.Pin21=PB8
+Mcu.Pin22=PB9
+Mcu.Pin23=PE0
+Mcu.Pin24=PE1
+Mcu.Pin25=VP_SYS_VS_Systick
+Mcu.Pin26=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin27=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin3=PA0-WKUP
+Mcu.Pin4=PA1
+Mcu.Pin5=PA2
+Mcu.Pin6=PA3
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PB12
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103ZETx
@@ -112,6 +115,20 @@ PD13.GPIO_Label=LED
 PD13.GPIO_PuPd=GPIO_PULLUP
 PD13.Locked=true
 PD13.Signal=GPIO_Input
+PE0.GPIOParameters=PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PE0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PE0.GPIO_PuPd=GPIO_NOPULL
+PE0.Locked=true
+PE0.PinState=GPIO_PIN_RESET
+PE0.Signal=GPIO_Output
+PE1.GPIOParameters=PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PE1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PE1.GPIO_PuPd=GPIO_NOPULL
+PE1.Locked=true
+PE1.PinState=GPIO_PIN_RESET
+PE1.Signal=GPIO_Output
+PE2.Locked=true
+PE2.Signal=GPIO_Input
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -204,7 +221,8 @@ TIM5.IPParameters=EncoderMode,IC1Filter,IC2Filter
 USART1.IPParameters=VirtualMode,Mode
 USART1.Mode=MODE_RX
 USART1.VirtualMode=VM_ASYNC
-USART2.IPParameters=VirtualMode
+USART2.BaudRate=9600
+USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
