--- a/two_select_stm32f103zet6/2023E.ioc
+++ b/two_select_stm32f103zet6/2023E.ioc
@@ -10,63 +10,72 @@ Mcu.Family=STM32F1
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=TIM2
-Mcu.IP4=TIM3
-Mcu.IP5=TIM4
-Mcu.IP6=TIM5
-Mcu.IP7=USART1
-Mcu.IP8=USART2
-Mcu.IPNb=9
+Mcu.IP3=TIM1
+Mcu.IP4=TIM2
+Mcu.IP5=TIM3
+Mcu.IP6=TIM4
+Mcu.IP7=TIM5
+Mcu.IP8=USART1
+Mcu.IP9=USART2
+Mcu.IPNb=10
 Mcu.Name=STM32F103Z(C-D-E)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
 Mcu.Pin1=OSC_IN
-Mcu.Pin10=PB13
-Mcu.Pin11=PB14
-Mcu.Pin12=PB15
-Mcu.Pin13=PD13
-Mcu.Pin14=PA8
-Mcu.Pin15=PA9
-Mcu.Pin16=PA10
-Mcu.Pin17=PA13
-Mcu.Pin18=PA14
-Mcu.Pin19=PB6
+Mcu.Pin10=PE11
+Mcu.Pin11=PB12
+Mcu.Pin12=PB13
+Mcu.Pin13=PB14
+Mcu.Pin14=PB15
+Mcu.Pin15=PD13
+Mcu.Pin16=PA8
+Mcu.Pin17=PA9
+Mcu.Pin18=PA10
+Mcu.Pin19=PA13
 Mcu.Pin2=OSC_OUT
-Mcu.Pin20=PB7
-Mcu.Pin21=PB8
-Mcu.Pin22=PB9
-Mcu.Pin23=PE0
-Mcu.Pin24=PE1
-Mcu.Pin25=VP_SYS_VS_Systick
-Mcu.Pin26=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin27=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin20=PA14
+Mcu.Pin21=PB6
+Mcu.Pin22=PB7
+Mcu.Pin23=PB8
+Mcu.Pin24=PB9
+Mcu.Pin25=PE0
+Mcu.Pin26=PE1
+Mcu.Pin27=VP_SYS_VS_Systick
+Mcu.Pin28=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin29=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PA0-WKUP
+Mcu.Pin30=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin31=VP_RealThread.RT-Thread_VS_RTOSJjkernel_3.1.5_3.1.5
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
-Mcu.Pin9=PB12
-Mcu.PinsNb=28
-Mcu.ThirdPartyNb=0
+Mcu.Pin9=PE9
+Mcu.PinsNb=32
+Mcu.ThirdParty0=RealThread.RT-Thread.3.1.5
+Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
 Mcu.UserName=STM32F103ZETx
 MxCube.Version=6.11.1
 MxDb.Version=DB.6.0.111
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM2_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
-NVIC.USART1_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:true
-NVIC.USART2_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
+NVIC.SavedPendsvIrqHandlerGenerated=true
+NVIC.SavedSvcallIrqHandlerGenerated=true
+NVIC.SavedSystickIrqHandlerGenerated=true
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:true\:false
+NVIC.TIM2_IRQn=true\:4\:0\:true\:false\:true\:false\:true\:true\:true
+NVIC.USART1_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:true\:true
+NVIC.USART2_IRQn=true\:4\:0\:true\:false\:true\:false\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 OSC_IN.Mode=HSE-External-Oscillator
 OSC_IN.Signal=RCC_OSC_IN
 OSC_OUT.Mode=HSE-External-Oscillator
@@ -127,8 +136,10 @@ PE1.GPIO_PuPd=GPIO_NOPULL
 PE1.Locked=true
 PE1.PinState=GPIO_PIN_RESET
 PE1.Signal=GPIO_Output
+PE11.Signal=S_TIM1_CH2
 PE2.Locked=true
 PE2.Signal=GPIO_Input
+PE9.Signal=S_TIM1_CH1
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -160,7 +171,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM3_Init-TIM3-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_TIM5_Init-TIM5-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM3_Init-TIM3-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_TIM5_Init-TIM5-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -187,6 +198,14 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
+RealThread.RT-Thread.3.1.5.IPParameters=RTOSJjkernel
+RealThread.RT-Thread.3.1.5.RTOSJjkernel=true
+RealThread.RT-Thread.3.1.5.RTOSJjkernel_Checked=true
+RealThread.RT-Thread.3.1.5_SwParameter=RTOSJjkernel\:true;
+SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
+SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
+SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
@@ -199,6 +218,12 @@ SH.S_TIM5_CH1.0=TIM5_CH1,Encoder_Interface
 SH.S_TIM5_CH1.ConfNb=1
 SH.S_TIM5_CH2.0=TIM5_CH2,Encoder_Interface
 SH.S_TIM5_CH2.ConfNb=1
+TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period,AutoReloadPreload
+TIM1.Period=20000-1
+TIM1.Prescaler=72-1
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=1000-1
 TIM2.Prescaler=720-1
@@ -224,8 +249,12 @@ USART1.VirtualMode=VM_ASYNC
 USART2.BaudRate=9600
 USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
+VP_RealThread.RT-Thread_VS_RTOSJjkernel_3.1.5_3.1.5.Mode=RTOSJjkernel
+VP_RealThread.RT-Thread_VS_RTOSJjkernel_3.1.5_3.1.5.Signal=RealThread.RT-Thread_VS_RTOSJjkernel_3.1.5_3.1.5
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
